--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ p{
     margin-top: 58px;
     display: flex;
     justify-content: space-around;
+    margin-bottom: 39px;
 }
 .container-bot{
     width: 100%;
